fix: block whitespaces

--- a/pages/styles/homepage.css
+++ b/pages/styles/homepage.css
@@ -14,6 +14,7 @@ body {
     width: 100%;
     padding: 20px;
     height: 100vh;
+    box-shadow: 10px 10px 20px 0px #b1b1b1;
 }
 
 .header {
